--- a/proyectoFinal/proy-backend/config/config.json
+++ b/proyectoFinal/proy-backend/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "mel150580",
+    "password": "12345678",
     "database": "tareaspfinal",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
-    "password": "mel150580",
+    "password": "12345678",
     "database": "tareaspfinal",
     "host": "127.0.0.1",
     "dialect": "postgres" 
